Added better comments in visualization file

--- a/Data Warehousing/Task 3/visualizations.ipynb
+++ b/Data Warehousing/Task 3/visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "db5fb9ac",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
     "df = pd.read_sql_query(query, conn)\n",
     "conn.close()\n",
     "\n",
-    "# --- 1. Total Sales by Country (Log Scale) ---\n",
+    "# 1. Total Sales by Country (Log Scale) ---\n",
     "plt.figure(figsize=(10,6))\n",
     "plt.bar(df['country'], df['total_sales'], color='skyblue')\n",
     "plt.yscale(\"log\")  # Apply log scale\n",
@@ -72,7 +72,7 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "# --- 2. Top 10 Countries ---\n",
+    "# 2. Top 10 Countries ---\n",
     "top10 = df.head(10)\n",
     "plt.figure(figsize=(8,5))\n",
     "plt.bar(top10['country'], top10['total_sales'], color='green')\n",
@@ -84,7 +84,7 @@
     "plt.savefig(\"sales_by_country_top10.png\", dpi=300)\n",
     "plt.show()\n",
     "\n",
-    "# --- 3. Bottom 10 Countries ---\n",
+    "# 3. Bottom 10 Countries ---\n",
     "bottom10 = df.tail(10)\n",
     "plt.figure(figsize=(8,5))\n",
     "plt.bar(bottom10['country'], bottom10['total_sales'], color='red')\n",
