Updated clustering and visualization ipynb files with better comments

--- a/Data Mining/Task 2/clustering_iris.ipynb
+++ b/Data Mining/Task 2/clustering_iris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "083a2814",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "\n",
-    "# Load and preprocess Iris data (similar to Task 1, simplified here)\n",
+    "# Load and preprocess Iris data \n",
     "def load_and_preprocess():\n",
     "    iris = load_iris()\n",
     "    df = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
