--- a/Data Warehousing/Task 3/visualizations.ipynb
+++ b/Data Warehousing/Task 3/visualizations.ipynb
@@ -59,7 +59,7 @@
     "df = pd.read_sql_query(query, conn)\n",
     "conn.close()\n",
     "\n",
-    "# 1. Total Sales by Country (Log Scale) ---\n",
+    "# 1. Total Sales by Country (Log Scale) \n",
     "plt.figure(figsize=(10,6))\n",
     "plt.bar(df['country'], df['total_sales'], color='skyblue')\n",
     "plt.yscale(\"log\")  # Apply log scale\n",
@@ -68,11 +68,11 @@
     "plt.ylabel(\"Total Sales (log scale)\")\n",
     "plt.title(\"Total Sales by Country\")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"sales_by_country_all_log.png\", dpi=300)\n",
+    "plt.savefig(\"Total_Sales_by_Country.png\", dpi=300)\n",
     "plt.show()\n",
     "\n",
     "\n",
-    "# 2. Top 10 Countries ---\n",
+    "# 2. Top 10 Countries\n",
     "top10 = df.head(10)\n",
     "plt.figure(figsize=(8,5))\n",
     "plt.bar(top10['country'], top10['total_sales'], color='green')\n",
@@ -81,10 +81,10 @@
     "plt.ylabel(\"Total Sales\")\n",
     "plt.title(\"Top 10 Countries by Sales\")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"sales_by_country_top10.png\", dpi=300)\n",
+    "plt.savefig(\"Top_10_Countries_by_Sales.png\", dpi=300)\n",
     "plt.show()\n",
     "\n",
-    "# 3. Bottom 10 Countries ---\n",
+    "# 3. Bottom 10 Countries \n",
     "bottom10 = df.tail(10)\n",
     "plt.figure(figsize=(8,5))\n",
     "plt.bar(bottom10['country'], bottom10['total_sales'], color='red')\n",
@@ -93,7 +93,7 @@
     "plt.ylabel(\"Total Sales\")\n",
     "plt.title(\"Bottom 10 Countries by Sales\")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"sales_by_country_bottom10.png\", dpi=300)\n",
+    "plt.savefig(\"Bottom_10_Countries_by_Sales.png\", dpi=300)\n",
     "plt.show()\n",
     "\n"
    ]
